--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,10 +9,10 @@ POSTGRES_DB=finance_db
 # Security
 SECRET_KEY=your_secret_key_change_in_production
 
-# OpenAI
-OPENAI_API_KEY=your_openai_api_key
+# Groq API (for ultra-fast LLM - OpenAI compatible!)
+GROQ_API_KEY=your_groq_api_key_here
 
-# Google OAuth
+# Google OAuth (optional)
 GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
 
