--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,13 @@
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
+    "pdfjs-dist": "^5.4.530",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.6.0",
+    "react-pdf": "^10.3.0",
+    "recharts": "^3.6.0",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
