--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,26 +1,22 @@
-# Finance API - Environment Variables
-
-# Database
+# Database Configuration
 DATABASE_URL=postgresql://user:password@db:5432/finance_db
-POSTGRES_USER=user
-POSTGRES_PASSWORD=password
-POSTGRES_DB=finance_db
 
-# Security
-SECRET_KEY=your_secret_key_change_in_production
+# Security & Authentication
+SECRET_KEY=your_super_secret_key_change_this_in_production
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# Groq API (for ultra-fast LLM - OpenAI compatible!)
-GROQ_API_KEY=your_groq_api_key_here
-
-# Google OAuth (optional)
+# Google OAuth (for Login)
 GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
 
-# Redis
-REDIS_URL=redis://redis:6379/0
+# LLM Provider (Groq)
+GROQ_API_KEY=gsk_your_groq_api_key
 
-# S3/MinIO
+# File Storage (MinIO / S3)
 S3_ENDPOINT=http://minio:9000
 S3_ACCESS_KEY=minioadmin
 S3_SECRET_KEY=minioadmin
-S3_BUCKET_NAME=finance-documents
+
+# Redis (Celery Broker & Result Backend)
+REDIS_URL=redis://redis:6379/0
