--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,10 +1,13 @@
 # Database Configuration
 DATABASE_URL=postgresql://user:password@db:5432/finance_db
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
+POSTGRES_DB=finance_db
 
 # Security & Authentication
-SECRET_KEY=your_super_secret_key_change_this_in_production
+SECRET_KEY=supersecretkey
 ALGORITHM=HS256
-ACCESS_TOKEN_EXPIRE_MINUTES=30
+ACCESS_TOKEN_EXPIRE_MINUTES=1440
 
 # Google OAuth (for Login)
 GOOGLE_CLIENT_ID=your_google_client_id
@@ -17,6 +20,10 @@ GROQ_API_KEY=gsk_your_groq_api_key
 S3_ENDPOINT=http://minio:9000
 S3_ACCESS_KEY=minioadmin
 S3_SECRET_KEY=minioadmin
+S3_BUCKET_NAME=avatars
+S3_PUBLIC_ENDPOINT=http://localhost:9000
+API_BASE_URL=http://localhost:8000
 
 # Redis (Celery Broker & Result Backend)
 REDIS_URL=redis://redis:6379/0
+
