--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,10 +17,10 @@ GOOGLE_CLIENT_SECRET=your_google_client_secret
 GROQ_API_KEY=gsk_your_groq_api_key
 
 # File Storage (MinIO / S3)
-S3_ENDPOINT=http://minio:9000
+S3_ENDPOINT=http://localhost:9000
 S3_ACCESS_KEY=minioadmin
 S3_SECRET_KEY=minioadmin
-S3_BUCKET_NAME=avatars
+S3_BUCKET_NAME=finance-documents
 S3_PUBLIC_ENDPOINT=http://localhost:9000
 API_BASE_URL=http://localhost:8000
 
