--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       - ./backend/.env
     environment:
       - DATABASE_URL=postgresql://user:password@db:5432/finance_db
+      - S3_ENDPOINT=http://minio:9000
       - S3_PUBLIC_ENDPOINT=http://localhost:9000
       - TZ=Asia/Kuala_Lumpur
     depends_on:
