--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,10 @@
     "react-dom": "19.2.3",
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.6.0",
+    "react-markdown": "^10.1.0",
     "react-pdf": "^10.3.0",
     "recharts": "^3.6.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.9"
   },
