feat: implement data persistence for financials and news
- feat(backend): added FinancialStatement and NewsArticle models
- feat(backend): created NewsService for scraping (Bursa, Star, NST) and FinanceService updates
- feat(backend): added Celery tasks for periodic news and finance updates
- feat(backend): added Celery Beat for task scheduling
- feat(backend): registered new news APIs
- feat(frontend): refactored dashboard to use backend persisted news
- fix(backend): resolved NameError and ImportError in news router
- fix(backend): updated yfinance to latest version to fix tickers
- fix(backend): fixed validation errors in upload endpoint
- fix(frontend): fixed Axios Content-Type header blocking uploads
- fix(frontend): fixed UploadZone mutation argument
- chore: added celery-beat to docker-compose
- chore: updated gitignore
- refactor: deprecated client-side news fetching

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -119,7 +119,21 @@ services:
       - S3_ACCESS_KEY=minioadmin
       - S3_SECRET_KEY=minioadmin
       - TZ=Asia/Kuala_Lumpur
-
+  celery-beat:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: finance_celery_beat
+    command: celery -A app.celery_app beat --loglevel=info
+    env_file:
+      - ./backend/.env
+    depends_on:
+      - db
+      - redis
+    environment:
+      - DATABASE_URL=postgresql://user:password@db:5432/finance_db
+      - REDIS_URL=redis://redis:6379/0
+      - TZ=Asia/Kuala_Lumpur
 volumes:
   postgres_data:
   minio_data:
