fix(rag): correct citation renumbering and filtering in chat responses
- Fixed issue where citations were not sequentially renumbered (e.g. Source 16 appearing without Source 1)
- Updated regex to handle noisy citation formats from LLM (e.g. [Source 16: News...])
- Implemented buffered streaming in chat endpoint to allow post-processing of full response
- Filtered unused citations from the response metadata to keep UI clean
- Added backend volume mount in docker-compose for better dev workflow logic

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,8 @@ services:
       - db
       - redis
       - minio
+    volumes:
+      - ./backend:/app
     develop:
       watch:
         - action: sync
