--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "@tanstack/react-query": "^5.90.16",
     "@tanstack/react-query-devtools": "^5.91.2",
     "axios": "^1.13.2",
@@ -23,6 +24,7 @@
     "react-dom": "19.2.3",
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.6.0",
+    "react-markdown": "^10.1.0",
     "react-pdf": "^10.3.0",
     "recharts": "^3.6.0",
     "tailwind-merge": "^3.4.0",
