--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,6 +16,9 @@ GOOGLE_CLIENT_SECRET=your_google_client_secret
 # LLM Provider (Groq)
 GROQ_API_KEY=gsk_your_groq_api_key
 
+# LLM Provider (Cerebras)
+CEREBRAS_API_KEY=csk_your_cerebras_api_key
+
 # File Storage (MinIO / S3)
 S3_ENDPOINT=http://localhost:9000
 S3_ACCESS_KEY=minioadmin
